--- a/experiment/templates/experiment/questionnaire.html
+++ b/experiment/templates/experiment/questionnaire.html
@@ -10,6 +10,6 @@
 <section>
     <h1>Questionnaire</h1>
     <iframe src="https://elomake.helsinki.fi/lomakkeet/97916/lomake.html" width='1000px' height='800px'></iframe>
-    <a href='{% url 'practice13' %}'></a>
+    <a href='{% url 'practice13' %}'>Done!</a>
 </section>
 {% endblock %}
