--- a/experiment/templates/experiment/consent.html
+++ b/experiment/templates/experiment/consent.html
@@ -9,7 +9,7 @@
 {% block content %}
 <section>
     <h1>Tietoon perustuva suostumus osallistua tutkimukseen.</h1>
-    <p>T&auml;m&auml; tutkimus on&nbsp;osa Helsingin yliopiston nykykielten laitoksen tutkimusta. Hyv&auml;ksym&auml;ll&auml; varmistat halukkuutesi osallistua tutkimukseen ja&nbsp;annat meille suostumuksesi vastausten k&auml;ytt&ouml;&ouml;n tutkimustarkoituksiin. Kaikki vastaukset tallennetaan automaattisesti. Kaikki vastaukset rekister&ouml;id&auml;&auml;n anonyymein&auml;.</p>
+    <p>T&auml;m&auml; tutkimus on&nbsp;osa Helsingin yliopiston nykykielten laitoksen tutkimusta. Hyv&auml;ksym&auml;ll&auml; varmistat halukkuutesi osallistua tutkimukseen ja&nbsp;annat meille suostumuksesi vastausten k&auml;ytt&ouml;&ouml;n tutkimustarkoituksiin. Kaikki vastaukset tallennetaan automaattisesti. Kaikki vastaukset rekister&ouml;id&auml;&auml;n anonyymein&auml;.</p><br>
     <form method="post">{% csrf_token %}
     <input type="submit" name='consent' value ="Olen samaa mieltä">
     <input type="submit" name='consent' value ="En ole samaa mieltä">
