--- a/experiment/templates/experiment/introduction.html
+++ b/experiment/templates/experiment/introduction.html
@@ -12,7 +12,7 @@
     <p>T&auml;m&auml; tutkimus koostuu useista alla luetelluista teht&auml;vist&auml;. Tutkimuksen tavoitteena&nbsp;on, ett&auml; teet ne&nbsp;kaikki. Kun olet suorittanut yhden teht&auml;v&auml;n, sinut ohjataan automaattisesti seuraavaan. Jaksottamisteht&auml;v&auml; vie eniten aikaa, joten suosittelemme, ett&auml; pid&auml;t teht&auml;v&auml;n aikana lyhyen tauon.</p>
     <p>Alustus  (~5-7 min) / </p>
     <p>Jaksottamistehtävä (~30 min) / </p> 
-    <p>Palaute  (~5 min) / </p>
+    <p>Palaute  (~5 min) / </p> <br>
     <a href='{% url 'consent' %}'>Jatka</a>
 </section>
 {% endblock %}
