--- a/experiment/templates/experiment/training1.html
+++ b/experiment/templates/experiment/training1.html
@@ -10,7 +10,7 @@
 
 <div id='start' style='display: block;'>
     <h2>Alustus</h2>
-    <p>Ihmiset prosessoivat tietoa jatkuvasti. Kun otamme vastaan informaatiota, meill&auml; on&nbsp;tapana erotella se&nbsp;nopeasti pieniksi paloiksi eli jaksoiksi. &Auml;l&auml; mieti liikaa, vaan pyri ty&ouml;skentelem&auml;&auml;n vaistonvaraisesti.</p>
+    <p class='paragraph'>Ihmiset prosessoivat tietoa jatkuvasti. Kun otamme vastaan informaatiota, meill&auml; on&nbsp;tapana erotella se&nbsp;nopeasti pieniksi paloiksi eli jaksoiksi. &Auml;l&auml; mieti liikaa, vaan pyri ty&ouml;skentelem&auml;&auml;n vaistonvaraisesti.</p>
 <a href="#" onclick="start();">Jatka</a>
 
 </div>
@@ -22,67 +22,66 @@
 
 <div id='instructions_1' style='display: none;'>
     <h2>Harjoitustehtävä (1/3)</h2>
-    <h3>Ohjeet</h3>
-    <p>T&auml;ss&auml; kohdassa p&auml;&auml;set harjoittelemaan oikeaa koeteht&auml;v&auml;&auml; varten. Kun painat &laquo;Aloita&raquo;, kuulet &auml;&auml;nitteen ja&nbsp;n&auml;et sen tekstimuodossa ruudulla. Kuuntele &auml;&auml;nite ja&nbsp;seuraa sit&auml; tekstist&auml;.</p>
-<a href="#" onclick="displaytext();togglePlay();">Aloita</a>
+    <h2>Ohjeet</h2>
+    <p class='paragraph'>T&auml;ss&auml; kohdassa p&auml;&auml;set harjoittelemaan oikeaa koeteht&auml;v&auml;&auml; varten. Kun painat &laquo;Aloita&raquo;, kuulet &auml;&auml;nitteen ja&nbsp;n&auml;et sen tekstimuodossa ruudulla. Kuuntele &auml;&auml;nite ja&nbsp;seuraa sit&auml; tekstist&auml;.</p>
+<a href="#" onclick="displaytext();togglePlay();" >Aloita</a>
 
 </div>
 
 <div id="practice_1" style="display: none;">
-        <h2>Harjoitustehtävä 1/3</h2>
-<a href="#" onclick="togglePlay();handler(this);">Tauko</a>
-    <article id='text_1' style="display: block;">
+    <h2>Harjoitustehtävä 1/3</h2>
+<a href="#" onclick="togglePlay();handler(this);" class='pause'>Tauko</a>
+    <span class = 'text' id='text_1' style="display: block;">
     <form method="post"  class="post-form" id='post-form-1' action=''>{% csrf_token %}
-        mul <input type="checkbox" name="check" value="0">
-        on <input type="checkbox" name="check" value="1">
-        oikeestaan <input type="checkbox" name="check" value="2">
-        niinku <input type="checkbox" name="check" value="3">
-        harrasteena <input type="checkbox" name="check" value="4">
-        tota <input type="checkbox" name="check" value="5">
-        nii <input type="checkbox" name="check" value="6">
-        nuoruusvuosilta <input type="checkbox" name="check" value="7">
-        niin <input type="checkbox" name="check" value="8">
-        roolipelitausta <input type="checkbox" name="check" value="9">
-        kynä <input type="checkbox" name="check" value="10">
-        ja <input type="checkbox" name="check" value="11">
-        paperi <input type="checkbox" name="check" value="12">
-        roolipelejä <input type="checkbox" name="check" value="13">
-        ja <input type="checkbox" name="check" value="14">
-        sitä <input type="checkbox" name="check" value="15">
-        kautta <input type="checkbox" name="check" value="16">
-        niinku <input type="checkbox" name="check" value="17">
-        intohimo <input type="checkbox" name="check" value="18">
-        kirjottamiseen <input type="checkbox" name="check" value="19">
-        oli <input type="checkbox" name="check" value="20">
-        läsnä <input type="checkbox" name="check" value="21">
-        ja <input type="checkbox" name="check" value="22">
-        kirjotin <input type="checkbox" name="check" value="23">
-        niissä <input type="checkbox" name="check" value="24">
-        harrastuspiireissä <input type="checkbox" name="check" value="25">
-        paljonkin <input type="checkbox" name="check" value="26">
-        tarinoita <input type="checkbox" name="check" value="27">
-        jotka <input type="checkbox" name="check" value="28">
-        linkitty <input type="checkbox" name="check" value="29">
-        roolipeleihin <input type="checkbox" name="check" value="30">
-        ja <input type="checkbox" name="check" value="31">
-        ja <input type="checkbox" name="check" value="32">
-        sitten <input type="checkbox" name="check" value="33">
-        menin <input type="checkbox" name="check" value="34">
-        englantilaista <input type="checkbox" name="check" value="35">
-        filologiaa <input type="checkbox" name="check" value="36">
-        opiskeleen <input type="checkbox" name="check" value="37">
-        yliopistolle <input type="checkbox" name="check" value="38">
-        öö <input type="checkbox" name="check" value="39">
-        kirjottelin <input type="checkbox" name="check" value="40">
-        englanniks <input type="checkbox" name="check" value="41">
-        koska <input type="checkbox" name="check" value="42">
-        roolipelimateriaalit <input type="checkbox" name="check" value="43">
-        lähtöjään <input type="checkbox" name="check" value="44">
-        oli <input type="checkbox" name="check" value="45">
-        aina <input type="checkbox" name="check" value="46">
-        aina <input type="checkbox" name="check" value="47">
-        englanniks
-    </article>
+<span>mul<input id="checkbox0" type="checkbox" name="check" value="0"><label class="checkbox_label" for="checkbox0"><span>~</span><span>|</span></label></span> 
+<span>on <input id="checkbox1" type="checkbox" name="check" value="1"><label class="checkbox_label" for="checkbox1"><span>~</span><span>|</span></label></span> 
+<span>oikeestaan <input id="checkbox2" type="checkbox" name="check" value="2"><label class="checkbox_label" for="checkbox2"><span>~</span><span>|</span></label></span> 
+<span>niinku <input id="checkbox3" type="checkbox" name="check" value="3"><label class="checkbox_label" for="checkbox3"><span>~</span><span>|</span></label></span> 
+<span>harrasteena <input id="checkbox4" type="checkbox" name="check" value="4"><label class="checkbox_label" for="checkbox4"><span>~</span><span>|</span></label></span> 
+<span>tota <input id="checkbox5" type="checkbox" name="check" value="5"><label class="checkbox_label" for="checkbox5"><span>~</span><span>|</span></label></span> 
+<span>nii <input id="checkbox6" type="checkbox" name="check" value="6"><label class="checkbox_label" for="checkbox6"><span>~</span><span>|</span></label></span> 
+<span>nuoruusvuosilta <input id="checkbox7" type="checkbox" name="check" value="7"><label class="checkbox_label" for="checkbox7"><span>~</span><span>|</span></label></span> 
+<span>niin <input id="checkbox8" type="checkbox" name="check" value="8"><label class="checkbox_label" for="checkbox8"><span>~</span><span>|</span></label></span> 
+<span>roolipelitausta <input id="checkbox9" type="checkbox" name="check" value="9"><label class="checkbox_label" for="checkbox9"><span>~</span><span>|</span></label></span> 
+<span>kynä <input id="checkbox10" type="checkbox" name="check" value="10"><label class="checkbox_label" for="checkbox10"><span>~</span><span>|</span></label></span> 
+<span>ja <input id="checkbox11" type="checkbox" name="check" value="11"><label class="checkbox_label" for="checkbox11"><span>~</span><span>|</span></label></span> 
+<span>paperi <input id="checkbox12" type="checkbox" name="check" value="12"><label class="checkbox_label" for="checkbox12"><span>~</span><span>|</span></label></span> 
+<span>roolipelejä <input id="checkbox13" type="checkbox" name="check" value="13"><label class="checkbox_label" for="checkbox13"><span>~</span><span>|</span></label></span> 
+<span>ja <input id="checkbox14" type="checkbox" name="check" value="14"><label class="checkbox_label" for="checkbox14"><span>~</span><span>|</span></label></span> 
+<span>sitä <input id="checkbox15" type="checkbox" name="check" value="15"><label class="checkbox_label" for="checkbox15"><span>~</span><span>|</span></label></span> 
+<span>kautta <input id="checkbox16" type="checkbox" name="check" value="16"><label class="checkbox_label" for="checkbox16"><span>~</span><span>|</span></label></span> 
+<span>niinku <input id="checkbox17" type="checkbox" name="check" value="17"><label class="checkbox_label" for="checkbox17"><span>~</span><span>|</span></label></span> 
+<span>intohimo <input id="checkbox18" type="checkbox" name="check" value="18"><label class="checkbox_label" for="checkbox18"><span>~</span><span>|</span></label></span> 
+<span>kirjottamiseen <input id="checkbox19" type="checkbox" name="check" value="19"><label class="checkbox_label" for="checkbox19"><span>~</span><span>|</span></label></span> 
+<span>oli <input id="checkbox20" type="checkbox" name="check" value="20"><label class="checkbox_label" for="checkbox20"><span>~</span><span>|</span></label></span> 
+<span>läsnä <input id="checkbox21" type="checkbox" name="check" value="21"><label class="checkbox_label" for="checkbox21"><span>~</span><span>|</span></label></span> 
+<span>ja <input id="checkbox22" type="checkbox" name="check" value="22"><label class="checkbox_label" for="checkbox22"><span>~</span><span>|</span></label></span> 
+<span>kirjotin <input id="checkbox23" type="checkbox" name="check" value="23"><label class="checkbox_label" for="checkbox23"><span>~</span><span>|</span></label></span> 
+<span>niissä <input id="checkbox24" type="checkbox" name="check" value="24"><label class="checkbox_label" for="checkbox24"><span>~</span><span>|</span></label></span> 
+<span>harrastuspiireissä <input id="checkbox25" type="checkbox" name="check" value="25"><label class="checkbox_label" for="checkbox25"><span>~</span><span>|</span></label></span> 
+<span>paljonkin <input id="checkbox26" type="checkbox" name="check" value="26"><label class="checkbox_label" for="checkbox26"><span>~</span><span>|</span></label></span> 
+<span>tarinoita <input id="checkbox27" type="checkbox" name="check" value="27"><label class="checkbox_label" for="checkbox27"><span>~</span><span>|</span></label></span> 
+<span>jotka <input id="checkbox28" type="checkbox" name="check" value="28"><label class="checkbox_label" for="checkbox28"><span>~</span><span>|</span></label></span> 
+<span>linkitty <input id="checkbox29" type="checkbox" name="check" value="29"><label class="checkbox_label" for="checkbox29"><span>~</span><span>|</span></label></span> 
+<span>roolipeleihin <input id="checkbox30" type="checkbox" name="check" value="30"><label class="checkbox_label" for="checkbox30"><span>~</span><span>|</span></label></span> 
+<span>ja <input id="checkbox31" type="checkbox" name="check" value="31"><label class="checkbox_label" for="checkbox31"><span>~</span><span>|</span></label></span> 
+<span>ja <input id="checkbox32" type="checkbox" name="check" value="32"><label class="checkbox_label" for="checkbox32"><span>~</span><span>|</span></label></span> 
+<span>sitten <input id="checkbox33" type="checkbox" name="check" value="33"><label class="checkbox_label" for="checkbox33"><span>~</span><span>|</span></label></span> 
+<span>menin <input id="checkbox34" type="checkbox" name="check" value="34"><label class="checkbox_label" for="checkbox34"><span>~</span><span>|</span></label></span> 
+<span>englantilaista <input id="checkbox35" type="checkbox" name="check" value="35"><label class="checkbox_label" for="checkbox35"><span>~</span><span>|</span></label></span> 
+<span>filologiaa <input id="checkbox36" type="checkbox" name="check" value="36"><label class="checkbox_label" for="checkbox36"><span>~</span><span>|</span></label></span> 
+<span>opiskeleen <input id="checkbox37" type="checkbox" name="check" value="37"><label class="checkbox_label" for="checkbox37"><span>~</span><span>|</span></label></span> 
+<span>yliopistolle <input id="checkbox38" type="checkbox" name="check" value="38"><label class="checkbox_label" for="checkbox38"><span>~</span><span>|</span></label></span> 
+<span>öö <input id="checkbox39" type="checkbox" name="check" value="39"><label class="checkbox_label" for="checkbox39"><span>~</span><span>|</span></label></span> 
+<span>kirjottelin <input id="checkbox40" type="checkbox" name="check" value="40"><label class="checkbox_label" for="checkbox40"><span>~</span><span>|</span></label></span> 
+<span>englanniks <input id="checkbox41" type="checkbox" name="check" value="41"><label class="checkbox_label" for="checkbox41"><span>~</span><span>|</span></label></span> 
+<span>koska <input id="checkbox42" type="checkbox" name="check" value="42"><label class="checkbox_label" for="checkbox42"><span>~</span><span>|</span></label></span> 
+<span>roolipelimateriaalit <input id="checkbox43" type="checkbox" name="check" value="43"><label class="checkbox_label" for="checkbox43"><span>~</span><span>|</span></label></span> 
+<span>lähtöjään <input id="checkbox44" type="checkbox" name="check" value="44"><label class="checkbox_label" for="checkbox44"><span>~</span><span>|</span></label></span> 
+<span>oli <input id="checkbox45" type="checkbox" name="check" value="45"><label class="checkbox_label" for="checkbox45"><span>~</span><span>|</span></label></span> 
+<span>aina <input id="checkbox46" type="checkbox" name="check" value="46"><label class="checkbox_label" for="checkbox46"><span>~</span><span>|</span></label></span> 
+<span>aina <input id="checkbox47" type="checkbox" name="check" value="47"><label class="checkbox_label" for="checkbox47"><span>~</span><span>|</span></label></span> 
+<span>englanniks</span>
 </div>
 
 
