--- a/experiment/templates/experiment/base.html
+++ b/experiment/templates/experiment/base.html
@@ -9,9 +9,11 @@
     <head>
         <meta charset="utf-8">
         <title>ChunkitApp</title>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel='stylesheet' type='text/css'>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <!--<link rel="stylesheet" href="../../static/css/reset.css"  >
         <link rel="stylesheet" href="../../static/css/recognitionpost.css" type="text/css" >-->
+        <link rel="stylesheet" href="{% static 'css/reset.css' %}"  >
         <link rel="stylesheet" href="{% static 'css/experiment.css' %}">
         <script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
         <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/png">
