--- a/experiment/templates/experiment/questionnaire.html
+++ b/experiment/templates/experiment/questionnaire.html
@@ -7,8 +7,49 @@
 
 
 {% block content %}
-<section>
-    <h1>Questionnaire</h1>
-    <a href='{% url 'training1' %}'>Done!</a>
+
+<section class='questionnaire'>
+	<h1>Taustatietolomake</h1>
+	<p>Ole hyv&auml; ja&nbsp;vastaa alla esitettyihin taustatietokysymyksiin. Henkil&ouml;kohtaisia tietojasi k&auml;sitell&auml;&auml;n luottamuksellisesti.</p>
+	<h2>Perustiedot</h2>
+	<form method="post"  class="questions-form" autocomplete="off">{% csrf_token %}
+		<ul>
+			<li><label>Ikä
+			<div class='control-label'>{{ form.age }}</div></label></li>
+			<li><label>Sukupuoli
+			<div class='control-label'>{{ form.sex }}</div></label></li>
+			<li><label>Kätisyys
+			<div class='control-label'>{{ form.hand }}</div></label></li>			
+			<li><label>Nykyinen asuinpaikka
+			<div class='control-label'>{{ form.place }}</div></label></li>
+			<li><label>Äidinkieli
+			<div class='control-label'>{{ form.language }}</div></label></li>
+			<li><label>Muut osaamasi kielet
+			<div>{{ form.other_languages }}</div></label></li>
+			<li><label>Mitä kieliä käytät säännlisesti arjessa?
+			<div class='control-label'>{{ form.use_language }}</div></label></li>
+		</ul>
+	<h2>Koulutus</h2>
+	<ul class='education'>
+		<li><label>Korkein suorittamasti tutkinto
+		<div class='control-label'>{{ form.education }}</div></label></li>
+		<li><label>Pääaine / ala
+		<div class='control-label'>{{ form.major }}</div></label></li>
+		<li><label>Jos olet opiskelija, mitä tutkintoa olet suorittamassa tällä hetkellä?
+		<div class='control-label'>{{ form.degree }}</div></label></li>
+	</ul>
+	<h2>Terveystiedot</h2>
+		<li><label>Onko sinulla diagnosoitu lukihäirio?
+		<div class='radio'>{{ form.dyslexia }}</div></label></li>
+		<li><label>Onko sinulla todettu kuulonalenema tai muita kuulemiseen liittyviä ongelmia?
+		<div class='radio'>{{ form.hearing }}</div></label></li>
+	<h2>Muuta</h2>
+	<ul>
+		<li><label>Kommentteja ja muita tietoja, jotka voivat olla tutkimuksen kannalta olennaisia: <br>
+		{{ form.comments }}</label></li>
+	</ul>
+	<button type="submit" class='submitquestionnaire'>L&auml;het&auml;</button>
+</form>
 </section>
+
 {% endblock %}
