--- a/experiment/templates/experiment/challange.html
+++ b/experiment/templates/experiment/challange.html
@@ -1367,7 +1367,7 @@
 </div>
 
 <audio preload="auto" class='pause' id="Player_18" onended="audioend();">
-    <source src="../../audio/15_sosiaalinen media.mp3"/>
+    <source src="../../audio/15_sosiaalinen_media.mp3"/>
 </audio>
 
 <div id="practice_18" style="display: none;">
