--- a/experiment/templates/experiment/passed.html
+++ b/experiment/templates/experiment/passed.html
@@ -8,6 +8,6 @@
 
 {% block content %}
 <section>
-    <p> You already passed experiment?</p>
+    <p>Olet jo&nbsp;suorittanut teht&auml;v&auml;n. Jos t&auml;m&auml; on&nbsp;v&auml;&auml;r&auml; ja&nbsp;n&auml;et t&auml;m&auml;n sivun, ota yhteytt&auml; tutkijaan.</p>
 </section>
 {% endblock %}
