--- a/experiment/templates/experiment/challange.html
+++ b/experiment/templates/experiment/challange.html
@@ -4404,7 +4404,7 @@ $(document).on("submit","#post-form-43",function(e) {
 
 
 var first_order = [1, 2, 3];
-var django_order = {{ order }};
+var django_order = {{ order }}
 var order = first_order.concat(django_order);
 console.log(django_order, order)
 
