--- a/experiment/templates/experiment/training2.html
+++ b/experiment/templates/experiment/training2.html
@@ -80,7 +80,7 @@
 
 <div id="popup" style="display: none;">
     <div id="okno">
-        <p>Onko puhuja harrastanut roolipelejä? </p>
+        <p class='paragraph'>Onko puhuja harrastanut roolipelejä? </p>
         <a href='{% url 'training3' %}'>Kyllä</a>
         <a href='{% url 'training3' %}'>Ei</a>
         </form>
