--- a/experiment/templates/experiment/training3.html
+++ b/experiment/templates/experiment/training3.html
@@ -80,7 +80,7 @@
 
 <div id="popup" style="display: none;">
     <div id="okno">
-        <p class='paragraph'>Onko puhuja harrastanut roolipelejä?</p>
+        <p class='okno'>Onko puhuja harrastanut roolipelejä?</p>
         <a href='{% url 'trainingcompleted' %}'>Kyllä</a>
         <a href='{% url 'trainingcompleted' %}'>Ei</a>
         </form>
