--- a/experiment/templates/experiment/consent.html
+++ b/experiment/templates/experiment/consent.html
@@ -9,8 +9,8 @@
 {% block content %}
 <section>
     <h1>Tietoon perustuva suostumus osallistua tutkimukseen.</h1>
-    <p>T&auml;m&auml; tutkimus on&nbsp;osa Helsingin yliopiston nykykielten laitoksen tutkimusta. Hyv&auml;ksym&auml;ll&auml; varmistat halukkuutesi osallistua tutkimukseen ja&nbsp;annat meille suostumuksesi vastausten k&auml;ytt&ouml;&ouml;n tutkimustarkoituksiin. Kaikki vastaukset tallennetaan automaattisesti. Kaikki vastaukset rekister&ouml;id&auml;&auml;n anonyymein&auml;.</p><br>
-    <p>K&auml;yt&auml;mme edistymisesi seuraamiseen ev&auml;steit&auml;. Ole hyv&auml; ja&nbsp;salli ev&auml;steet ennen suostumuksen antamista, jotta pystymme tunnistamaan sinut.</p><br>
+    <p>T&auml;m&auml; tutkimus on&nbsp;osa Helsingin yliopiston nykykielten laitoksen tutkimusta. Hyv&auml;ksym&auml;ll&auml; varmistat halukkuutesi osallistua tutkimukseen ja&nbsp;annat meille suostumuksesi vastausten k&auml;ytt&ouml;&ouml;n tutkimustarkoituksiin. Kaikki vastaukset tallennetaan automaattisesti. Kaikki vastaukset rekister&ouml;id&auml;&auml;n anonyymein&auml;.</p>
+    <p>K&auml;yt&auml;mme edistymisesi seuraamiseen ev&auml;steit&auml;. Ole hyv&auml; ja&nbsp;salli ev&auml;steet ennen suostumuksen antamista, jotta pystymme tunnistamaan sinut.</p>
     <form method="post">{% csrf_token %}
     <input type="submit" name='consent' value ="Olen samaa mieltä">
     <input type="submit" name='consent' value ="En ole samaa mieltä">
