--- a/experiment/templates/experiment/feedback.html
+++ b/experiment/templates/experiment/feedback.html
@@ -6,39 +6,48 @@
 {% extends 'experiment/base.html' %}
 
 {% block content %}
-<section class='questionnaire'>
+<section class='feedback'>
     <h1>Palautekysely</h1>
     <p>Ole hyvä ja vastaa alla oleviin kysymyksiin. Vastauksesi ovat meille tärkeitä!</p>
     <h2>Väitteet</h2>
 <form method="post"  class="questions-form" autocomplete="off">{% csrf_token %}
-		<ul>
+		<ul class='parent'>
 			<li><label><div class='control-label'>Tehtävän ohjeet olivat selvät.</div>
-			{{ form.instructions }}</label></li>
-			<li><label><div class='control-label'>Tiesin mitä tein.</div>{{ form.doing }}</div></label></li>
-			<li><label><div class='control-label'>Tehtävä oli melko yksinkertainen.</div>{{ form.simple }}</div></label></li>			
-			<li><label><div class='control-label'>Tehtävä oli hyvin vaativa. Olen väsynyt.</div>{{ form.demanding }}</div></label></li>
-			<li><label><div class='control-label'>Tehtävä aiheutti minulle kovia paineita. </div>{{ form.pressure }}</div></label></li>
-			<li><label><div class='control-label'>Tehtävä oli hauska.</div>{{ form.fun }}</div></label></li>
-			<li><label><div class='control-label'>Mielestäni tehtävä heijastaa jollain tapaa sitä, mitä teen puhetta kuunnellessani.</div>{{ form.reflects }}</div></label></li>
+			<div>{{ form.instructions }}</label></li>
+			<li><label><div class='control-label'>Tiesin mitä tein.</div>
+				<div>{{ form.doing }}</div></label></li>
+			<li><label><div class='control-label'>Tehtävä oli melko yksinkertainen.</div>
+				<div>{{ form.simple }}</div></label></li>			
+			<li><label><div class='control-label'>Tehtävä oli hyvin vaativa. Olen väsynyt.</div>
+				<div>{{ form.demanding }}</div></label></li>
+			<li><label><div class='control-label'>Tehtävä aiheutti minulle kovia paineita. </div>
+				<div>{{ form.pressure }}</div></label></li>
+			<li><label><div class='control-label'>Tehtävä oli hauska.</div>
+				<div>{{ form.fun }}</div></label></li>
+			<li><label><div class='control-label'>Mielestäni tehtävä heijastaa jollain tapaa sitä, mitä teen puhetta kuunnellessani.</div>
+				<div>{{ form.reflects }}</div></label></li>
 		</ul>
 	<h2>Suoritusarvio</h2>
-		<ul>
-			<li><label><div class='control-label'>Kuinka arvioisit suoritustasi tehtävässä?</div>{{ form.performance }}</div></label></li>
+		<ul class = 'parent'>
+			<li><label><div class='control-label'>Kuinka arvioisit suoritustasi tehtävässä?</div>
+				<div>{{ form.performance }}</div></label></li>
 		</ul>
 	<h2>Ymmärrys</h2>
-		<ul>
-			<li><label><div class='control-label'>Ymmärsin, mitä puhuja sanoi…</div>{{ form.understanding }}</div></label></li>
+		<ul class = 'parent'>
+			<li><label><div class='control-label'>Ymmärsin, mitä puhuja sanoi…</div>
+				<div>{{ form.understanding }}</div></label></li>
 		</ul>
 	<h2>Muuta</h2>
-			<li><label>Voitteko arvata, mitä osa-tehtävä mitattiin?
+	    <ul  class = 'parent'>
+			<li><label><div>Voitteko arvata, mitä osa-tehtävä mitattiin?</div>
 			<div>{{ form.task }}</div></label></li>
-			<li><label>Hyväksyitkö tietoisesti jonkin strategian palojen välisten rajojen merkitsemisessä?
+			<li><label><div>Hyväksyitkö tietoisesti jonkin strategian palojen välisten rajojen merkitsemisessä?</div>
 			<div>{{ form.strategy }}</div></label></li>
-			<li><label>Mitä kriteereitä käytit rajojen merkitsemiseen, jos sellaisia on?
+			<li><label><div>Mitä kriteereitä käytit rajojen merkitsemiseen, jos sellaisia on?</div>
 			<div>{{ form.criteria }}</div></label></li>
-			<li><label>Saitko vaikutelman, että tehtävä helpottui vähitellen?
+			<li><label><div>Saitko vaikutelman, että tehtävä helpottui vähitellen?</div>
 			<div>{{ form.impression }}</div></label></li>
-			<li><label>Onko sinulla muita kommentteja?
+			<li><label><div>Onko sinulla muita kommentteja?</div>
 			<div>{{ form.comments }}</div></label></li>			
 		</ul>
     <button type="submit" class='submitquestionnaire'>L&auml;het&auml;</button>
