Vrode vse pravki popravleny i eshe chut chut popravleny

--- a/experiment/templates/experiment/feedback.html
+++ b/experiment/templates/experiment/feedback.html
@@ -40,15 +40,15 @@
 	<h2>Muuta</h2>
 	    <ul  class = 'parent'>
 			<li><label><div>Voitteko arvata, mitä osa-tehtävä mitattiin?</div>
-			<div>{{ form.task }}</div></label></li>
+			{{ form.task }}</label></li>
 			<li><label><div>Hyväksyitkö tietoisesti jonkin strategian palojen välisten rajojen merkitsemisessä?</div>
-			<div>{{ form.strategy }}</div></label></li>
+			{{ form.strategy }}</label></li>
 			<li><label><div>Mitä kriteereitä käytit rajojen merkitsemiseen, jos sellaisia on?</div>
-			<div>{{ form.criteria }}</div></label></li>
+			{{ form.criteria }}</label></li>
 			<li><label><div>Saitko vaikutelman, että tehtävä helpottui vähitellen?</div>
-			<div>{{ form.impression }}</div></label></li>
+			{{ form.impression }}</label></li>
 			<li><label><div>Onko sinulla muita kommentteja?</div>
-			<div>{{ form.comments }}</div></label></li>			
+			{{ form.comments }}</label></li>			
 		</ul>
     <button type="submit" class='submitquestionnaire'>L&auml;het&auml;</button>
 </form>
