Mistake with requered and questions in safari

--- a/experiment/templates/experiment/challenge.html
+++ b/experiment/templates/experiment/challenge.html
@@ -24,7 +24,7 @@
 <div id='instructions_1' style='display: block;'>
     <h2>Ohjeet</h2>
     <p class='paragraph'>Teht&auml;v&auml;n&auml;si on&nbsp;merkit&auml; rajoja jaksojen v&auml;liin painamalla &rsquo;〜&rsquo; -symboleja. Yksi painallus tuo rajan n&auml;kyviin. Jos painat symbolia uudestaan, raja katoaa. Jos kadotat rivin teksti&auml; lukiessa, pyri pysym&auml;&auml;n puhujan tahdissa. &Auml;l&auml; palaa taaksep&auml;in. Katkelman j&auml;lkeen sinulle esitet&auml;&auml;n kuullun ymm&auml;rt&auml;miseen liittyv&auml; kysymys.</p>
-<a href="#" class='send1' onclick="nextpart();audioplay();">Aloita</a>
+<a href="#" onclick="nextpart();audioplay();">Aloita</a>
 </div>
 
 
